--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.project</groupId>
 	<artifactId>evernote</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>blog</name>
+	<name>evernote</name>
 	<description>blog projetct</description>
 
 	<properties>
@@ -51,7 +51,6 @@
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-crypto</artifactId>
-			<version>3.1.0.RELEASE</version>
 		</dependency>
 
 		<!-- Thymeleaf for views (resources/templates/) -->
@@ -88,6 +87,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
+			<version>2.2.6.RELEASE</version>
 			<scope>test</scope>
 			<exclusions>
 				<exclusion>
@@ -111,6 +111,12 @@
 		<dependency>
 			<groupId>org.liquibase</groupId>
 			<artifactId>liquibase-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
 		</dependency>
 
 	</dependencies>
